<resources>
    <string name="app_name">Calculator2</string>
    <string name="operator_sum">+</string>
    <string name="operator_subtract">-</string>
    <string name="operator_multiply">x</string>
    <string name="operator_division">/</string>
    <string name="operator_equals">=</string>
    <string name="operator_percent">%</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_signal">+/-</string>
    <string name="dot">.</string>
    <string name="clean_screen">AC</string>
</resources>
